2006-09-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_get_index):
	applied a modified patch from David Gowers that changes the search
	behaviour to favour colors in the neighborhood of the selected color
	(bug #355520).

2006-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in: mention the Win32 twain plug-in in the summary.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcolortool.c (gimp_color_tool_button_press)
	(gimp_color_tool_button_release): chain up to activate/halt the tool.

	* app/tools/gimppainttool.c (gimp_paint_tool_button_press)
	(gimp_paint_tool_button_release)
	(gimp_paint_tool_motion): if the color tool is enabled, chain up
	early and return. Fixes selection PAUSE/RESUME mismatch that was
	hiding this display's selection forever when moving sample points.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimppainttool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimpselectiontool.c
	* app/tools/gimpsourcetool.c
	* app/tools/gimpvectortool.c: back out change committed on
	2006-08-21 which passed modifier events to tools even while mouse1
	was down. This generated way too much unexpected events that would
	have to be special cased in all tools. Will implement an
	alternative solution soon.

2006-09-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerpopup.c: removed unused includes.

2006-09-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpclonetool.c
	* app/tools/gimpconvolvetool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimpdodgeburntool.c
	* app/tools/gimperasertool.c
	* app/tools/gimppainttool.c
	* app/tools/gimpperspectiveclonetool.c
	* app/tools/gimpregionselecttool.c
	* app/tools/gimpselectiontool.c
	* app/tools/gimpsmudgetool.c
	* app/tools/gimpvectortool.c: removed trailing dot from statusbar
	messages.
